Avoid additional white space in the description (#689)
* avoid additional white space in the description

--- a/app/styles/dashboard-style.css
+++ b/app/styles/dashboard-style.css
@@ -599,8 +599,7 @@ body.fixed-sidebar.mini-navbar .nav-label, body.fixed-sidebar.mini-navbar .navba
     border-color: #ed5565 !important;
 }
 
-.description {
-    text-align: justify;
+.description p {
     white-space: pre-wrap;
     font-family: inherit;
 }
